# fairlanes

./: .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENTS.txt  CMakeLists.txt  CmakePresets.json  Doxyfile  Enemies.md  README.md  build_and_deploy.sh  build_coverage.sh  build_emscripten.ps1  build_emscripten.sh  build_emscripten_debug.sh  build_emscripten_deploy_dir.sh  generate_crash_backtrace_file
src/: CMakeLists.txt  fairlanes.cpp
src/fl/: CMakeLists.txt  account_data.hpp  assert.hpp  bus_types.hpp  chaos_attract_grand_central.cpp  chaos_attract_grand_central.hpp  context.cpp  context.hpp  fwd.hpp  grand_central.cpp  grand_central.hpp  lospec500.cpp  lospec500.hpp  move_only.hpp  party_data.hpp  random_hub.hpp  time_units.hpp  tracy_shim.hpp  web_screen_bridge.cpp  web_screen_bridge.hpp
src/fl/combat/: party_bus.hpp
src/fl/ecs/: fwd.hpp
src/fl/ecs/components/: atb_charge.hpp  closet.cpp  closet.hpp  color_override.hpp  combat_status.hpp  dire_bleed.hpp  encounter.cpp  encounter.hpp  equipment.cpp  equipment.hpp  field_debuff.hpp  freeze.hpp  hp_bar_color_override.hpp  is_account.hpp  is_party.cpp  is_party.hpp  monster_identity.hpp  party_member.cpp  party_member.hpp  poison.hpp  selected_account.hpp  skill_slots.hpp  stats.cpp  stats.hpp  status_effect.hpp  tags.hpp  track_xp.cpp  track_xp.hpp  visual_effects.hpp
src/fl/ecs/systems/: combat_status_system.cpp  combat_status_system.hpp  combatant_status_visuals.cpp  combatant_status_visuals.hpp  dire_bleed_system.cpp  dire_bleed_system.hpp  freeze_system.cpp  freeze_system.hpp  grant_xp_to_party.cpp  grant_xp_to_party.hpp  loot_drop.cpp  loot_drop.hpp  party_gearing.cpp  party_gearing.hpp  poison_system.cpp  poison_system.hpp  special_festival_event.cpp  (+8 more)
src/fl/events/: account_bus.hpp  animation_finished.hpp  battle_bus.cpp  battle_bus.hpp  beat.hpp  beat_bus.hpp  beat_clock.hpp  combat.hpp  log_bus.hpp  log_event.hpp  party_bus.hpp  ready_queue.hpp  timed_event_queue.hpp
src/fl/fsm/: party_loop.cpp  party_loop.hpp  party_loop_ctx.cpp  party_loop_ctx.hpp  party_loop_machine.cpp  party_loop_machine.hpp
src/fl/loot/: armor_kind.hpp  equipment_builder.hpp  equipment_slot.hpp  fwd.h  global_loot_table.cpp  global_loot_table.hpp  item_kind.hpp  loot_table.hpp  rarity.hpp  rarity_table.hpp  special_item.hpp  tier.hpp  unique_items.hpp  upgrade_table.hpp  weight.hpp  weighted_choice.hpp  weighted_table.hpp
src/fl/monsters/: apply_monster_stats.cpp  apply_monster_stats.hpp  decal_monsters.cpp  decal_monsters.hpp  field_mouse.cpp  field_mouse.hpp  fire_drake.cpp  fire_drake.hpp  honey_badger.cpp  honey_badger.hpp  monster_kind.hpp  monster_registry.hpp  monster_skills.cpp  monster_skills.hpp  register_monsters.cpp  register_monsters.hpp  salamander.cpp  salamander.hpp  woodland_critter.cpp  woodland_critter.hpp  yeti.cpp  yeti.hpp
src/fl/primitives/: account_data.cpp  account_data.hpp  component_builder.hpp  damage.hpp  encounter_builder.cpp  encounter_builder.hpp  encounter_data.cpp  encounter_data.hpp  encounter_mode.hpp  entity_builder.hpp  fancy_log_sink.hpp  farming_plan.cpp  farming_plan.hpp  hero_names.cpp  hero_names.hpp  logging.hpp  member_data.cpp  member_data.hpp  moon_calendar.cpp  moon_calendar.hpp  party_data.cpp  party_data.hpp  party_names.hpp  random_hub.hpp  team.hpp  world_clock.hpp
src/fl/skills/: eviscerate.cpp  eviscerate.hpp  grimoire.cpp  grimoire.hpp  skill.hpp  skill_definition.cpp  skill_definition.hpp  skill_learning.cpp  skill_learning.hpp  skill_selection.cpp  skill_selection.hpp  skill_sequence.cpp  skill_sequence.hpp  skill_visuals.hpp  thump.cpp  thump.hpp
src/fl/widgets/: account_battle_view.cpp  account_battle_view.hpp  all_account_battle_screen.cpp  all_account_battle_screen.hpp  battle_render_budget.cpp  battle_render_budget.hpp  chaos_attract_root.cpp  chaos_attract_root.hpp  combatant.cpp  combatant.hpp  console_overlay.cpp  console_overlay.hpp  effect_gallery_view.cpp  effect_gallery_view.hpp  equipment_label.cpp  equipment_label.hpp  fancy_log.cpp  fancy_log.hpp  farming_choice_view.cpp  farming_choice_view.hpp  fill_bar.cpp  fill_bar.hpp  inventory_list.cpp  inventory_list.hpp  log_wall.hpp  moon_calendar_view.cpp  moon_calendar_view.hpp  party_battle_screen.cpp  party_battle_screen.hpp  party_status.cpp  party_status.hpp  party_view.cpp  party_view.hpp  player_details_pane.cpp  player_details_pane.hpp  root_chrome.cpp  root_chrome.hpp  root_component.cpp  root_component.hpp  ui_command_controller.cpp  (+1 more)
src/sr/: CMakeLists.txt  atb_bus.hpp  atb_context.hpp  atb_engine.cpp  atb_engine.hpp  atb_events.hpp  atb_fsm.hpp  beat_bus.hpp  bus.hpp  combatant_engine.hpp  combatant_fsm.hpp  encounter_bus.hpp  encounter_events.hpp  encounter_loop.cpp  encounter_loop.hpp  encounter_runtime.hpp  encounter_types.hpp  encounter_view.hpp  overloaded.hpp  paired_bus.hpp  ready_queue.hpp  resolver.hpp  timed_scheduler.hpp  uWu.hpp  variant_bus.hpp  wire.hpp
tests/: CMakeLists.txt  test_grand_central.cpp  test_initial_entities.cpp
tests/ecs/components/: test_color_override.cpp  test_encounter.cpp  test_equipment.cpp  test_hp_bar_color_override.cpp  test_track_xp.cpp
tests/ecs/systems/: test_combat_status_system.cpp  test_combatant_status_visuals.cpp  test_party_gearing.cpp  test_visual_resolver.cpp
tests/events/: test_battle_bus.cpp  test_ready_queue.cpp  test_timed_event_queue.cpp
tests/monsters/: test_field_mouse.cpp
tests/primitives/: test_account_data.cpp  test_encounter.cpp  test_farming_plan.cpp  test_moon_calendar.cpp  test_random_hub.cpp
tests/primitives/encounters/: test_thump_it_out.cpp
tests/seerin/: simple_view.hpp  test_atb_full_loop.cpp  test_atb_sml.cpp  test_combatant_engine.cpp  test_encounter_loop.cpp  test_seerin.cpp  test_time_scheduler.cpp  test_uWu.cpp
tests/skills/: test_grimoire.cpp  test_skill_rank.cpp  test_skill_tags.cpp
tests/support/: battle_bus_recorder.hpp
tests/widgets/: test_battle_render_budget.cpp  test_combatant.cpp  test_decal_animation.cpp  test_effect_gallery.cpp  test_fancy_log.cpp  test_root_presentation.cpp
(+111 files in other folders)
